--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 body{
 	background-color: #FFFFFF;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 body > * + * {
@@ -89,12 +89,21 @@ select {
 /* -------------------------CSS RESET END------------------------- */
 
 
+
 /* -------------------------CAROUSEL BEGINNING------------------------- */
 .carousel {
+    overflow: auto;
+    display: flex;
     scroll-snap-type: x mandatory;
-    scroll-padding: 0 24px;
+    width: 800px;
+    margin: 0 auto;
 }
 
 .carousel .item {
+    height: 200px;
+    width: 200px;
+    background: red;
+    margin-right: 5px;
+    flex-shrink: 0;
     scroll-snap-align: start;
 }
