--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #FFFFFF;
+  background-color: #2a2a2a;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -110,28 +110,55 @@ select {
 
 
 
+/* -------------------------FONT USE BEGINNING------------------------- */
+@font-face {
+  font-family: SportingGrotesque;
+  src: url('../fonts/SportingGrotesque-Bold.otf');
+}
+
+
+/* -------------------------FONT USE END------------------------- */
+
+/* -------------------------TITLE BEGINNING------------------------- */
+.title {
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 3rem;
+  margin-top: 1rem;
+}
+
+/* -------------------------TITLE END------------------------- */
+
 /* -------------------------CAROUSEL BEGINNING------------------------- */
 .carousel {
     overflow: auto;
     display: flex;
     scroll-snap-type: x mandatory;
-    width: 800px;
+    width: 80rem;
     margin: 0 auto;
 }
 
+.carousel::-webkit-scrollbar {
+  width: 0 !important;
+}
+
 .carousel .item {
-    height: 30rem;
-    width: 50rem;
+    height: 40rem;
+    width: 80rem;
     background: black;
     margin-right: 5px;
     flex-shrink: 0;
     scroll-snap-align: start;
+    margin-top: 1rem;
+    cursor: none;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: white;
+    font-family: SportingGrotesque;
+    font-size: 8rem;
 }
 
 /* -------------------------CAROUSEL END------------------------- */
@@ -141,4 +168,40 @@ select {
 .London {
   background-image: url("../pics/london.jpg") !important;
   background-size: cover !important;
+  
+}
+
+@keyframes fluid {
+  0%, 100% {
+    clip-path: polygon(
+      0% 45%
+      16% 44%,
+      33% 50%,
+      54% 60%,
+      70% 61%,
+      84% 59%,
+      100% 52%,
+      100% 100%,
+      0% 100%
+    );
+  }
+  50% {
+    clip-path: polygon(
+      0% 60%,
+      15% 65%,
+      34% 66%,
+      51% 62%,
+      67% 50%,
+      84% 45%,
+      100% 46%,
+      100% 100%,
+      0% 100%
+    );
+  }
+}
+
+@keyframes wordSizes {
+  0% {font-size: 5rem;}
+  50% {font-size: 6rem;}
+  100% {font-size: 7rem;}
 }
