--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,27 @@ select {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 3rem;
   margin-top: 1rem;
+  position: relative;
+  text-decoration: none;
+}
+
+.title::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: wheat;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+.title:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
 }
 
 /* -------------------------TITLE END------------------------- */
@@ -161,47 +182,30 @@ select {
     font-size: 8rem;
 }
 
+.item::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1rem;
+  border-radius: 1rem;
+  background-color: #2a2a2a;
+  bottom: 26rem;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+.item:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
 /* -------------------------CAROUSEL END------------------------- */
 
 /* -------------------------CAROUSEL ITEMS BEGINNING------------------------- */
 
 .London {
   background-image: url("../pics/london.jpg") !important;
-  background-size: cover !important;
-  
-}
-
-@keyframes fluid {
-  0%, 100% {
-    clip-path: polygon(
-      0% 45%
-      16% 44%,
-      33% 50%,
-      54% 60%,
-      70% 61%,
-      84% 59%,
-      100% 52%,
-      100% 100%,
-      0% 100%
-    );
-  }
-  50% {
-    clip-path: polygon(
-      0% 60%,
-      15% 65%,
-      34% 66%,
-      51% 62%,
-      67% 50%,
-      84% 45%,
-      100% 46%,
-      100% 100%,
-      0% 100%
-    );
-  }
-}
-
-@keyframes wordSizes {
-  0% {font-size: 5rem;}
-  50% {font-size: 6rem;}
-  100% {font-size: 7rem;}
+  background-size: cover !important; 
 }
