--- a/Cities/London/London.css
+++ b/Cities/London/London.css
@@ -1,6 +1,192 @@
-html, body, #viewDiv {
-    padding: 0;
+body{
+    background-color: #001219;
+    cursor: none;
+    overflow: hidden;
+  }
+  
+  body > * + * {
+      margin-top: 1rem;
+  }
+  
+  
+  /* -------------------------CSS RESET START------------------------- */
+  /* Box sizing rules */
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+  
+  /* Remove default margin */
+  body,
+  h1,
+  h2,
+  h3,
+  h4,
+  p,
+  figure,
+  blockquote,
+  dl,
+  dd {
     margin: 0;
-    height: 100%;
+  }
+  
+  /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+  ul[role='list'],
+  ol[role='list'] {
+    list-style: none;
+  }
+  
+  /* Set core root defaults */
+  html:focus-within {
+    scroll-behavior: smooth;
+  }
+  
+  /* Set core body defaults */
+  body {
+    min-height: 100vh;
+    text-rendering: optimizeSpeed;
+    line-height: 1.5;
+  }
+  
+  /* A elements that don't have a class get default styles */
+  a:not([class]) {
+    text-decoration-skip-ink: auto;
+  }
+  
+  /* Make images easier to work with */
+  img,
+  picture {
+    max-width: 100%;
+    display: block;
+  }
+  
+  /* Inherit fonts for inputs and buttons */
+  input,
+  button,
+  textarea,
+  select {
+    font: inherit;
+  }
+  
+  /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+  @media (prefers-reduced-motion: reduce) {
+    html:focus-within {
+     scroll-behavior: auto;
+    }
+    
+    *,
+    *::before,
+    *::after {
+      animation-duration: 0.01ms !important;
+      animation-iteration-count: 1 !important;
+      transition-duration: 0.01ms !important;
+      scroll-behavior: auto !important;
+    }
+  }
+  
+  /* -------------------------CSS RESET END------------------------- */
+  
+  
+  
+  /* -------------------------CUSTOM POINTER BEGINNING------------------------- */
+  .custom-pointer {
+    position: fixed;
+    top: -5px;
+    left: -5px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #0a9396;
+    box-shadow: 0 0 0 5px #001219, 0 0 0 6px #0a9396;
+    transition: 100ms;
+    z-index: 1000;
+  }
+  
+  
+  /* -------------------------CUSTOM POINTER END------------------------- */
+  
+  
+  
+  /* -------------------------FONT USE BEGINNING------------------------- */
+  @font-face {
+    font-family: SportingGrotesque;
+    src: url('../fonts/SportingGrotesque-Bold.otf');
+  }
+  
+  
+  /* -------------------------FONT USE END------------------------- */
+  
+  /* -------------------------TITLE BEGINNING------------------------- */
+  .title {
+    color: #94d2bd;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 3rem;
+    margin-top: 1rem;
+    position: relative;
+    text-decoration: none;
+  }
+  
+  .title::before {
+    content: '';
+    position: absolute;
     width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #94d2bd;
+    bottom: 0;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
+  }
+  
+  .title:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+  }
+  
+  /* -------------------------TITLE END------------------------- */
+  
+  /* -------------------------London------------------------- */
+.box {
+    background-color: #94d2bd;
+    width: 40rem;
+    left: 6rem;
+    top: 5.5rem;
+    height: 25rem;
+    position: absolute;
+    color: #001219;
+    border: solid;
+    border-color: #001219;
+    border-width: 0.1rem;
+    transition: 2s !important;
+}
+
+.box:hover {
+    border: solid;
+    border-color: #0a9396;
+    border-width: 2rem;
+    transition: 2s;
+}
+
+.subtitle {
+    font-size: 2rem;
+    margin-top: 2rem;
+    margin-left: 1rem;
+}
+
+.desc {
+    font-size: 1rem;
+    top: 2rem;
+    left: 2rem;
+    width: 35rem;
+    margin-left: 1rem;
+}
+
+.image {
+    background-image: url('./pictures/arboretum.jpg');
+    height: 25rem;
+    width: 38rem;
+    margin-left: 50rem;
 }
